[package]
name = "merman-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless layout + SVG renderer for Mermaid (parity-focused; upstream SVG goldens)."
documentation = "https://docs.rs/merman-render"
readme = "README.md"
keywords = ["mermaid", "diagrams", "svg", "layout", "headless"]
categories = ["visualization"]
exclude = [
  "examples/*_debug_svg.rs",
  "examples/ratex_math_audit.rs",
  "tests/**",
]

[features]
default = []
ratex-math = [
  "dep:ratex-layout",
  "dep:ratex-parser",
  "dep:ratex-svg",
  "dep:ratex-types",
  "ratex-svg/embed-fonts",
  "ratex-svg/standalone",
]

[dependencies]
base64.workspace = true
chrono.workspace = true
dugong.workspace = true
indexmap.workspace = true
manatee.workspace = true
merman-core.workspace = true
pulldown-cmark.workspace = true
ratex-layout = { workspace = true, optional = true }
ratex-parser = { workspace = true, optional = true }
ratex-svg = { workspace = true, optional = true }
ratex-types = { workspace = true, optional = true }
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
roughr.workspace = true
ryu-js.workspace = true
svgtypes = "0.11"
url.workspace = true
unicode-width.workspace = true
web-time.workspace = true

[dev-dependencies]
futures.workspace = true
regex.workspace = true
