[package]
name = "merman-uniffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "UniFFI bindings for merman headless Mermaid rendering."
documentation = "https://docs.rs/merman-uniffi"
readme = "README.md"
keywords = ["mermaid", "diagrams", "uniffi", "svg", "headless"]
categories = ["api-bindings", "visualization"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "generate_python_package"
required-features = ["bindgen-smoke"]

[features]
default = ["core-full", "core-host", "render", "analysis", "ascii"]
core-full = ["merman-bindings-core/core-full"]
core-host = ["merman-bindings-core/core-host"]
analysis = ["merman-bindings-core/analysis"]
ascii = ["merman-bindings-core/ascii"]
render = ["merman-bindings-core/render"]
ratex-math = ["render", "merman-bindings-core/ratex-math"]
raster = ["merman-bindings-core/raster"]
bindgen-smoke = ["uniffi/bindgen"]

[dependencies]
merman-bindings-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uniffi.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
