[package]
name = "merman-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for merman browser rendering."
documentation = "https://docs.rs/merman-wasm"
readme = "README.md"
keywords = ["mermaid", "diagrams", "wasm", "svg", "headless"]
categories = ["wasm", "visualization"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["core-full", "core-host", "render", "ascii", "elk-layout"]
core-full = ["merman-bindings-core/core-full"]
core-host = ["merman-bindings-core/core-host"]
ascii = ["merman-bindings-core/ascii"]
render = ["merman-bindings-core/render"]
cytoscape-layout = ["merman-bindings-core/cytoscape-layout"]
elk-layout = ["merman-bindings-core/elk-layout"]
ratex-math = ["render", "merman-bindings-core/ratex-math"]

[dependencies]
console_error_panic_hook.workspace = true
js-sys.workspace = true
merman-analysis.workspace = true
merman-bindings-core.workspace = true
merman-editor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
