[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono.workspace = true
base64.workspace = true
futures.workspace = true
dugong = { path = "../dugong" }
merman = { path = "../merman" }
merman-render = { path = "../merman-render" }
regex.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
